# Fast_Api_App

./: .gitignore  README.md  main.py  pyproject.toml
