[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = ""
authors = ["sonia <https://github.com/Soniabensaad>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
